// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Base Button Snapshot should render with large size 1`] = `
<div>
  <button
    class="css-1pgtik7"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with small size 1`] = `
<div>
  <button
    class="css-bl58ye"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated color 1`] = `
<div>
  <button
    class="css-18myfl8"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    class="css-18skba4"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated textTransform 1`] = `
<div>
  <button
    class="css-xf1vbq"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    class="css-ebgli1"
    id="testId"
  >
    Test Text
  </button>
</div>
`;
